[package]
name = "ups-zen-x-control"
version = "0.1.0"
authors = ["Aytixel <aytixel@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

[dependencies]
hidapi = "1.2.5"
fltk = "^0.11"